Adds rollup build script alongside.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "watch": "npm run babel -- --watch",
-    "examples": "webpack-dev-server",
+    "examples:babel": "webpack-dev-server --config webpack.config.babel.js",
+    "examples:rollup": "webpack-dev-server --config webpack.config.rollup.js",
     "prettier": "prettier --write src/**/*.js",
     "precommit": "lint-staged",
     "pretest": "npm run flow && eslint src test",
@@ -30,31 +31,37 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^21.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-jason": "^3.1.1",
     "eslint": "^4.3.0",
     "eslint-config-jason": "^4.0.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flow": "^2.29.1",
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
     "flow-bin": "^0.61.0",
+    "glob": "^7.1.2",
     "husky": "^0.14.3",
     "invariant": "^2.2.2",
     "jest": "^21.2.1",
     "lint-staged": "^6.0.0",
     "prettier": "^1.9.1",
+    "react-dom": "^16.2.0",
+    "rollup": "^0.53.0",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.2.6",
     "webpack": "^3.10.0",
     "webpack-atoms": "^4.1.2",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
     "dom-helpers": "^3.2.1",
-    "eslint-plugin-flow": "^2.29.1",
     "global": "^4.3.2",
     "react": "^16.2.0",
     "react-devtools": "^3.0.0",
-    "react-dom": "^16.2.0",
     "react-reconciler": "^0.7.0"
   }
 }
