--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^16.2.0",
     "rollup": "^0.53.0",
     "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-commonjs": "^8.2.6",
     "webpack": "^3.10.0",
     "webpack-atoms": "^4.1.2",
