--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "compression-webpack-plugin": "^1.1.3",
     "eslint": "^4.3.0",
     "eslint-config-jason": "^4.0.0",
     "eslint-config-prettier": "^2.9.0",
