--- a/src/.babelrc
+++ b/src/.babelrc
@@ -10,6 +10,7 @@
     [ "flow" ],
   ],
   "plugins": [
-    "babel-plugin-transform-react-jsx"
+    "transform-react-jsx",
+    "transform-class-properties"
   ]
 }
